Bug 389854 - Bad UX when attempting to zoom in on graph
Summary: Bad UX when attempting to zoom in on graph
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: frontend (other bugs)
Version First Reported In: latest
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-02-04 03:17 UTC by Matthew Trescott
Modified: 2018-02-04 09:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Matthew Trescott 2018-02-04 03:17:48 UTC
On a Cartesian Plot, if you hold down the Ctrl key and use the mouse wheel, LabPlot scales the plot but not the whole worksheet. This is very unintuitive...
Comment 1 Alexander Semke 2018-02-04 09:07:29 UTC
Git commit eaf4359102b719c0e00a2dffc2604aebbb1a880f by Alexander Semke.
Committed on 04/02/2018 at 09:06.
Pushed by asemke into branch 'master'.

Allow to always zoom in the worksheet using CTRL+wheel independent of the current mouse mode in the worksheet.
FIXED-IN: 2.5

M  +14   -2    src/commonfrontend/worksheet/WorksheetView.cpp
M  +2    -0    src/commonfrontend/worksheet/WorksheetView.h

https://commits.kde.org/labplot/eaf4359102b719c0e00a2dffc2604aebbb1a880f