Allow to always zoom in the worksheet using CTRL+wheel independent of the current mouse mode in the worksheet.

BUG: 389854
FIXED-IN: 2.5